2010-03-05  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	Backport:
	2009-10-15  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
	* lib/target-supports.exp (add_options_for_bind_pic_locally): New.
	
	2009-10-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
	* g++.dg/other/first-global.C: Use dg-add-options bind_pic_locally.
	* g++.dg/parse/attr-externally-visible-1.C: Likewise.
	* g++.dg/tree-ssa/nothrow-1.C: Likewise.
	* gcc.dg/ipa/ipa-1.c: Likewise.
	* gcc.dg/ipa/ipa-2.c: Likewise.
	* gcc.dg/ipa/ipa-3.c: Likewise.
	* gcc.dg/ipa/ipa-4.c: Likewise.
	* gcc.dg/ipa/ipa-5.c: Likewise.
	* gcc.dg/ipa/ipa-7.c: Likewise.

2010-02-16  Paolo Bonzini  <bonzini@gnu.org>

	* gcc.c-torture/execute/pr41917.c: New test.

2010-02-04  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libfortran/42901
	* gfortran.dg/namelist_60.f90: New test.
	* gfortran.dg/namelist_59.f90: New test.
	* gcc/testsuite/gfortran.dg/namelist_47.f90: Update test.
	* gcc/testsuite/gfortran.dg/namelist_40.f90: Update test.
	
2010-02-04  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/42952
	* gcc.dg/torture/pr42952.c: New testcase.

2010-01-31  Eric Botcazou  <ebotcazou@adacore.com>

	PR middle-end/42898
	* gcc.dg/torture/pr42898-2.c: New test.

2010-01-31  Richard Guenther  <rguenther@suse.de>

	* gcc.dg/torture/pr42898.c: Skip -O0.

2010-01-31  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42898
	* gcc.dg/torture/pr42898.c: New testcase.

2010-01-18  Uros Bizjak  <ubizjak@gmail.com>

	PR target/42774
	* gcc.target/alpha/pr42774.c: New test.

2010-01-17  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2010-01-13  Steve Ellcey  <sje@cup.hp.com>

	PR target/42542
	* gcc.target/ia64/pr42542-1.c: New.
	* gcc.target/ia64/pr42542-2.c: New.
	* gcc.target/ia64/pr42542-3.c: New.

2010-01-07  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-01-05  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/42542
	* gcc.target/i386/pr42542-1.c: New.
	* gcc.target/i386/pr42542-1a.c: Likewise.